fixed layout shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,7 @@
 
 html {
     scrollbar-gutter: stable;
-    --header-height: 86px;
+    --header-height: 103px;
 }
 
 /* Prose dark mode */
